syntax = "proto3";

package CacheService;

service CacheRequest {
  rpc SendMessage (CacheMsgRequest) returns (CacheMsgReply) {}
}

message CacheMsgRequest {
  string _id = 1;
  string func = 2;
  int32 scope = 3;
  string key = 4;
  string value = 5;
  string config = 6;
}

message CacheMsgReply {
  string _id = 1;
  bool ok = 2;
  int32 scope = 3;
  string key = 4;
  string data = 5;
}